fix textalign navbar

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -52,7 +52,7 @@
     display: block;
     width: 100%;
     padding: 10px 0 10px 0;
-
+    text-align: center;
 }
 
 .customnavbar__listcategory__item__megamenu__dropdown__item__link:hover{
